# xiaohongshu-crawler

./: .gitignore  CLAUDE.md  README.md  claude_mcp_config.example.json  main.py  mcp_server.py  pyproject.toml
.plan/: rednote-crawler-plan.md
.reports/: codemap-diff.txt  docs-update-summary.txt
config/: settings.yaml
docs/: CONTRIBUTING.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md
scripts/: verify_e2e.py  verify_login.py  verify_mcp_tools.py  verify_note.py  verify_search.py  verify_stealth.py
src/: auth.py  browser.py  comment.py  errors.py  note.py  parser.py  search.py  session.py  stealth.py  storage.py
tests/: conftest.py  test_comment.py  test_errors.py  test_mcp_integration.py  test_mcp_tools.py  test_mcp_tools_phase_c.py  test_mcp_tools_phase_d.py  test_mcp_transport.py  test_note_module.py  test_note_public.py  test_parser.py  test_search_module.py  test_session.py  test_session_phase_b.py  test_session_phase_c.py  test_session_phase_d.py  test_stealth.py  test_storage.py
