[project]
name = "rednote-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "browserforge>=1.2.4",
    "mcp[cli]>=1.26.0",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pyyaml>=6.0.3",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
